---
source: parser/src/tests/ast.rs
expression: "crate::tests::parsing_file_ast_json(\"hello.k\",\n    r####\"\na = 10\nb = 12\n_condition = 0\nif a == 11 or b == 13: _condition = 1\nelif a == 10 and b == 12: _condition = 2\ncondition = _condition\n        \"####)"
---
{
  "filename": "hello.k",
  "doc": null,
  "body": [
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "a",
                "filename": "hello.k",
                "line": 2,
                "column": 0,
                "end_line": 2,
                "end_column": 1
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "hello.k",
            "line": 2,
            "column": 0,
            "end_line": 2,
            "end_column": 1
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 10
            }
          },
          "filename": "hello.k",
          "line": 2,
          "column": 4,
          "end_line": 2,
          "end_column": 6
        },
        "ty": null
      },
      "filename": "hello.k",
      "line": 2,
      "column": 0,
      "end_line": 2,
      "end_column": 6
    },
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "b",
                "filename": "hello.k",
                "line": 3,
                "column": 0,
                "end_line": 3,
                "end_column": 1
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "hello.k",
            "line": 3,
            "column": 0,
            "end_line": 3,
            "end_column": 1
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 12
            }
          },
          "filename": "hello.k",
          "line": 3,
          "column": 4,
          "end_line": 3,
          "end_column": 6
        },
        "ty": null
      },
      "filename": "hello.k",
      "line": 3,
      "column": 0,
      "end_line": 3,
      "end_column": 6
    },
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "_condition",
                "filename": "hello.k",
                "line": 4,
                "column": 0,
                "end_line": 4,
                "end_column": 10
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "hello.k",
            "line": 4,
            "column": 0,
            "end_line": 4,
            "end_column": 10
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 0
            }
          },
          "filename": "hello.k",
          "line": 4,
          "column": 13,
          "end_line": 4,
          "end_column": 14
        },
        "ty": null
      },
      "filename": "hello.k",
      "line": 4,
      "column": 0,
      "end_line": 4,
      "end_column": 14
    },
    {
      "node": {
        "type": "If",
        "body": [
          {
            "node": {
              "type": "Assign",
              "targets": [
                {
                  "node": {
                    "name": {
                      "node": "_condition",
                      "filename": "hello.k",
                      "line": 5,
                      "column": 23,
                      "end_line": 5,
                      "end_column": 33
                    },
                    "paths": [],
                    "pkgpath": ""
                  },
                  "filename": "hello.k",
                  "line": 5,
                  "column": 23,
                  "end_line": 5,
                  "end_column": 33
                }
              ],
              "value": {
                "node": {
                  "type": "NumberLit",
                  "binary_suffix": null,
                  "value": {
                    "type": "Int",
                    "value": 1
                  }
                },
                "filename": "hello.k",
                "line": 5,
                "column": 36,
                "end_line": 5,
                "end_column": 37
              },
              "ty": null
            },
            "filename": "hello.k",
            "line": 5,
            "column": 23,
            "end_line": 5,
            "end_column": 37
          }
        ],
        "cond": {
          "node": {
            "type": "Binary",
            "left": {
              "node": {
                "type": "Compare",
                "left": {
                  "node": {
                    "type": "Identifier",
                    "names": [
                      {
                        "node": "a",
                        "filename": "hello.k",
                        "line": 5,
                        "column": 3,
                        "end_line": 5,
                        "end_column": 4
                      }
                    ],
                    "pkgpath": "",
                    "ctx": "Load"
                  },
                  "filename": "hello.k",
                  "line": 5,
                  "column": 3,
                  "end_line": 5,
                  "end_column": 4
                },
                "ops": [
                  "Eq"
                ],
                "comparators": [
                  {
                    "node": {
                      "type": "NumberLit",
                      "binary_suffix": null,
                      "value": {
                        "type": "Int",
                        "value": 11
                      }
                    },
                    "filename": "hello.k",
                    "line": 5,
                    "column": 8,
                    "end_line": 5,
                    "end_column": 10
                  }
                ]
              },
              "filename": "hello.k",
              "line": 5,
              "column": 3,
              "end_line": 5,
              "end_column": 21
            },
            "op": "Or",
            "right": {
              "node": {
                "type": "Compare",
                "left": {
                  "node": {
                    "type": "Identifier",
                    "names": [
                      {
                        "node": "b",
                        "filename": "hello.k",
                        "line": 5,
                        "column": 14,
                        "end_line": 5,
                        "end_column": 15
                      }
                    ],
                    "pkgpath": "",
                    "ctx": "Load"
                  },
                  "filename": "hello.k",
                  "line": 5,
                  "column": 14,
                  "end_line": 5,
                  "end_column": 15
                },
                "ops": [
                  "Eq"
                ],
                "comparators": [
                  {
                    "node": {
                      "type": "NumberLit",
                      "binary_suffix": null,
                      "value": {
                        "type": "Int",
                        "value": 13
                      }
                    },
                    "filename": "hello.k",
                    "line": 5,
                    "column": 19,
                    "end_line": 5,
                    "end_column": 21
                  }
                ]
              },
              "filename": "hello.k",
              "line": 5,
              "column": 14,
              "end_line": 5,
              "end_column": 21
            }
          },
          "filename": "hello.k",
          "line": 5,
          "column": 3,
          "end_line": 5,
          "end_column": 21
        },
        "orelse": [
          {
            "node": {
              "type": "If",
              "body": [
                {
                  "node": {
                    "type": "Assign",
                    "targets": [
                      {
                        "node": {
                          "name": {
                            "node": "_condition",
                            "filename": "hello.k",
                            "line": 6,
                            "column": 26,
                            "end_line": 6,
                            "end_column": 36
                          },
                          "paths": [],
                          "pkgpath": ""
                        },
                        "filename": "hello.k",
                        "line": 6,
                        "column": 26,
                        "end_line": 6,
                        "end_column": 36
                      }
                    ],
                    "value": {
                      "node": {
                        "type": "NumberLit",
                        "binary_suffix": null,
                        "value": {
                          "type": "Int",
                          "value": 2
                        }
                      },
                      "filename": "hello.k",
                      "line": 6,
                      "column": 39,
                      "end_line": 6,
                      "end_column": 40
                    },
                    "ty": null
                  },
                  "filename": "hello.k",
                  "line": 6,
                  "column": 26,
                  "end_line": 6,
                  "end_column": 40
                }
              ],
              "cond": {
                "node": {
                  "type": "Binary",
                  "left": {
                    "node": {
                      "type": "Compare",
                      "left": {
                        "node": {
                          "type": "Identifier",
                          "names": [
                            {
                              "node": "a",
                              "filename": "hello.k",
                              "line": 6,
                              "column": 5,
                              "end_line": 6,
                              "end_column": 6
                            }
                          ],
                          "pkgpath": "",
                          "ctx": "Load"
                        },
                        "filename": "hello.k",
                        "line": 6,
                        "column": 5,
                        "end_line": 6,
                        "end_column": 6
                      },
                      "ops": [
                        "Eq"
                      ],
                      "comparators": [
                        {
                          "node": {
                            "type": "NumberLit",
                            "binary_suffix": null,
                            "value": {
                              "type": "Int",
                              "value": 10
                            }
                          },
                          "filename": "hello.k",
                          "line": 6,
                          "column": 10,
                          "end_line": 6,
                          "end_column": 12
                        }
                      ]
                    },
                    "filename": "hello.k",
                    "line": 6,
                    "column": 5,
                    "end_line": 6,
                    "end_column": 24
                  },
                  "op": "And",
                  "right": {
                    "node": {
                      "type": "Compare",
                      "left": {
                        "node": {
                          "type": "Identifier",
                          "names": [
                            {
                              "node": "b",
                              "filename": "hello.k",
                              "line": 6,
                              "column": 17,
                              "end_line": 6,
                              "end_column": 18
                            }
                          ],
                          "pkgpath": "",
                          "ctx": "Load"
                        },
                        "filename": "hello.k",
                        "line": 6,
                        "column": 17,
                        "end_line": 6,
                        "end_column": 18
                      },
                      "ops": [
                        "Eq"
                      ],
                      "comparators": [
                        {
                          "node": {
                            "type": "NumberLit",
                            "binary_suffix": null,
                            "value": {
                              "type": "Int",
                              "value": 12
                            }
                          },
                          "filename": "hello.k",
                          "line": 6,
                          "column": 22,
                          "end_line": 6,
                          "end_column": 24
                        }
                      ]
                    },
                    "filename": "hello.k",
                    "line": 6,
                    "column": 17,
                    "end_line": 6,
                    "end_column": 24
                  }
                },
                "filename": "hello.k",
                "line": 6,
                "column": 5,
                "end_line": 6,
                "end_column": 24
              },
              "orelse": []
            },
            "filename": "hello.k",
            "line": 6,
            "column": 0,
            "end_line": 7,
            "end_column": 0
          }
        ]
      },
      "filename": "hello.k",
      "line": 5,
      "column": 0,
      "end_line": 7,
      "end_column": 0
    },
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "condition",
                "filename": "hello.k",
                "line": 7,
                "column": 0,
                "end_line": 7,
                "end_column": 9
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "hello.k",
            "line": 7,
            "column": 0,
            "end_line": 7,
            "end_column": 9
          }
        ],
        "value": {
          "node": {
            "type": "Identifier",
            "names": [
              {
                "node": "_condition",
                "filename": "hello.k",
                "line": 7,
                "column": 12,
                "end_line": 7,
                "end_column": 22
              }
            ],
            "pkgpath": "",
            "ctx": "Load"
          },
          "filename": "hello.k",
          "line": 7,
          "column": 12,
          "end_line": 7,
          "end_column": 22
        },
        "ty": null
      },
      "filename": "hello.k",
      "line": 7,
      "column": 0,
      "end_line": 7,
      "end_column": 22
    }
  ],
  "comments": []
}
